--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.application.name=financecontrol
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 
 #Basic Spring Boot Config for Oracle
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=math
-spring.datasource.password=admin123
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
