--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,11 @@ spring.application.name=financecontrol
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#Basic Spring Boot Config for Oracle
+# Basic Spring Boot Config for Oracle
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=edu
+spring.datasource.password=eduardo123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# Doc
+springdoc.swagger-ui.path=/doc
